# brainpalace

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  Taskfile.yml  config.yaml.example
brainpalace-cli/: README.md  Taskfile.yml  config.yaml.example  pyproject.toml
brainpalace-cli/brainpalace_cli/: __init__.py  __main__.py  ai_guidance.py  cli.py  config.py  config_fields.py  config_migrate.py  config_parity.py  config_resolve.py  config_review.py  config_schema.py  diagnostics.py  discovery.py  known_projects.py  lsp_install.py  merge.py  migration.py  optional_deps.py  prompt_render.py  providers.py  runtime_probe.py  search_guard_bash.py  xdg_paths.py
brainpalace-cli/brainpalace_cli/client/: __init__.py  api_client.py  errors.py
brainpalace-cli/brainpalace_cli/commands/: __init__.py  _dashboard_url.py  ai_guide.py  backfill.py  bm25_project.py  cache.py  config.py  context.py  dashboard.py  doctor.py  entities.py  estimate_util.py  extraction.py  extraction_drain.py  folders.py  graph.py  hook.py  index.py  ingest.py  init.py  init_plan.py  inject.py  install_agent.py  install_mcp.py  jobs.py  list_cmd.py  lsp.py  mcp.py  memories.py  plugin_detect.py  query.py  read_only.py  reap.py  recall.py  records.py  references.py  rehome.py  remember.py  reset.py  rules.py  (+13 more)
brainpalace-cli/brainpalace_cli/data/: ai_guidance.md
brainpalace-cli/brainpalace_cli/doc_sync/: __init__.py  allowlist.py  contract_parity.py  facts.py  generator.py  introspect.py  markers.py  mode_meta.py  mode_parity.py  orchestrator.py  referential.py  serializer.py  triggers.py
brainpalace-cli/brainpalace_cli/mcp_server/: __init__.py  lifecycle.py  schemas.py  server.py  tools.py
brainpalace-cli/brainpalace_cli/runtime/: __init__.py  antigravity_converter.py  claude_converter.py  codex_converter.py  converter_base.py  gemini_converter.py  kimi_converter.py  opencode_converter.py  parser.py  qwen_converter.py  skill_instruction_converter.py  skill_runtime_converter.py  tool_maps.py  types.py
brainpalace-cli/tests/: AGENTS.md  CLAUDE.md  __init__.py  conftest.py  test_activation_gate.py  test_add_audit_metadata.py  test_ai_guidance.py  test_antigravity_converter.py  test_backfill.py  test_bm25_language_cli.py  test_bugfix01_start_timeout.py  test_cache_command.py  test_cli.py  test_cli_install.py  test_cli_query_modes.py  test_client.py  test_client_blocked.py  test_client_list_jobs_all.py  test_client_rehome.py  test_codex_converter.py  test_config.py  test_config_commands.py  test_config_extra_sections.py  test_config_fields.py  test_config_fields_scope.py  test_config_fields_sections.py  test_config_migrate.py  test_config_parity.py  test_config_query_log.py  test_config_resolve.py  test_config_review.py  test_config_review_layer.py  test_config_schema.py  test_config_validate.py  test_config_wizard_alias.py  test_config_wizard_global.py  test_config_wizard_parity.py  test_config_wizard_prefill.py  test_config_wizard_store_type.py  test_connection_error_handling.py  (+127 more)
brainpalace-dashboard/: .gitignore  README.md  Taskfile.yml  pyproject.toml
brainpalace-dashboard/brainpalace_dashboard/: __init__.py  app.py  config.py  coverage_maps.py  model_introspect.py  server.py  ui_schema.py
brainpalace-dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
brainpalace-dashboard/tests/: conftest.py  test_app_health.py  test_capabilities.py  test_config_effective.py  test_config_read.py  test_config_roundtrip_realistic.py  test_config_unset.py  test_config_write.py  test_config_write_changed_only.py  test_config_write_tolerates_unknown.py  test_dashboard_auth.py  test_dashboard_config.py  test_dashboard_parity.py  test_dashboard_server.py  test_data_guard.py  test_instances_lifecycle.py  test_instances_list.py  test_integration_lifecycle.py  test_integration_proxy.py  test_proxy.py  test_proxy_helpers.py  test_replay_omits_sensitive.py  test_routes_config.py  test_routes_config_guard.py  test_routes_data.py  test_routes_events.py  test_routes_global_config.py  test_routes_instances.py  test_routes_queries.py  test_routes_runtime_config.py  test_routes_settings.py  test_static_mount.py  test_ui_schema.py  test_ui_schema_help.py  test_ui_schema_registry.py  test_version_display.py
brainpalace-life/: README.md  Taskfile.yml  pyproject.toml
brainpalace-life/brainpalace_life/: __init__.py
brainpalace-life/tests/: test_consumer_doc_seams.py  test_import_boundary_gate.py  test_scaffold.py
brainpalace-server/: .env.example  README.md  Taskfile.yml  pyproject.toml
brainpalace-server/brainpalace_server/: __init__.py  locking.py  logging_filters.py  process_spawn.py  project_root.py  registry.py  runtime.py  self_heal.py  status_report.py  storage_paths.py
brainpalace-server/templates/: docker-compose.postgres.yml
brainpalace-server/tests/: AGENTS.md  CLAUDE.md  __init__.py  conftest.py  test_auto_grace.py  test_bind_config.py  test_chunk_eviction_service.py  test_content_injector.py  test_doc_pending_store_lifespan_order.py  test_document_loader_gitignore.py  test_document_loader_minified.py  test_embedding_cache.py  test_embedding_cache_history.py  test_embedding_lazy_summarization.py  test_embedding_uncached_indices.py  test_estimate_local.py  test_extraction_lifespan_decouple.py  test_extraction_mode_gating.py  test_extraction_pending_concurrency.py  test_extraction_reconciler_wiring.py  test_extraction_router.py  test_extraction_submit_resolution.py  test_file_lock.py  test_file_type_presets.py  test_file_watcher_service.py  test_folder_manager.py  test_folder_manager_watch.py  test_folders_api.py  test_gitignore_matcher.py  test_gitignore_matcher_git_layers.py  test_graph_backend_parity.py  test_graph_index_retrieval.py  test_graph_store_browse_reads.py  test_graph_store_browse_subgraph.py  test_graph_store_edge_properties.py  test_graph_store_manager_query_power.py  test_graph_store_property_api.py  test_graph_store_sqlite_manager.py  test_include_types.py  test_index_backpressure.py  (+61 more)
(+1174 files in other folders)
