[tool.poetry]
name = "brainpalace-rag"
version = "26.7.11"
description = "BrainPalace - Typed-memory & retrieval engine for AI agents (BM25 + vector + GraphRAG); code & docs today, more domains coming"
authors = ["bxw91"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/bxw91/brainpalace"
repository = "https://github.com/bxw91/brainpalace"
documentation = "https://github.com/bxw91/brainpalace#readme"
keywords = ["brainpalace", "rag", "semantic-search", "ai-memory", "llm-memory", "documentation", "indexing", "llama-index", "chromadb", "ai-agent", "claude-code", "agent-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]
packages = [{include = "brainpalace_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
llama-index-core = "^0.14.0"
llama-index-readers-file = "^0.5.0"
llama-index-embeddings-openai = "^0.5.0"
chromadb = "^0.5.0"
openai = "^1.57.0"
anthropic = "^0.40.0"
tiktoken = "^0.8.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
llama-index-llms-openai = "^0.6.12"
tree-sitter-language-pack = "^0.7.3"
pyyaml = "^6.0.0"
pathspec = "^0.12.0"
# setuptools is declared explicitly because Python >=3.12 venvs ship without it,
# and a few transitive deps (pytz, wrapt) reach for `pkg_resources` — but both
# guard the import with try/except, so they tolerate its absence on setuptools
# >= 81 (which removed the vendored pkg_resources). The one dep that hard-imported
# pkg_resources at module load and crashed indexing/keyword search on setuptools
# >= 81 was `stopwordsiso`; the stopword dataset is now vendored
# (indexing/text_analysis/vendor/stopwords-iso.json, loaded via importlib.resources),
# so the upper bound is no longer needed.
setuptools = ">=65"

# Pluggable Provider dependencies (Feature 103)
cohere = "^5.0.0"
google-genai = "^1.0.0"

# Reranking dependencies (Feature 01 - Two-Stage Reranking)
# Optional: the local cross-encoder reranker pulls PyTorch (~2.8 GB). It is
# installed on opt-in via the `reranker-local` extra, never bundled in the base
# install. The reranker module imports it lazily, so the server runs without it
# (stage-2 reranking falls back to stage-1 when absent).
sentence-transformers = {version = "^3.4.0", optional = true}

# PostgreSQL dependencies (Phase 6)
asyncpg = "^0.29.0"
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}
cachetools = ">=5.3"

# Multi-language BM25 dependencies
PyStemmer = "^2.2.0"                               # Snowball stemmers (import Stemmer); was only transitive
bm25s = "^0.2.14"                                  # direct scoring engine (was only transitive)
py3langid = "^0.3.0"
simplemma = {version = "^1.2", optional = true}    # Croatian lemma tier (engine=lemma, hbs data)

[tool.poetry.extras]
graphrag = []
postgres = ["asyncpg", "sqlalchemy"]
lemma-hr = ["simplemma"]
reranker-local = ["sentence-transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
types-PyYAML = "^6.0.0"
types-cachetools = "^6.2.0.20251022"

[tool.poetry.scripts]
brainpalace-serve = "brainpalace_server.api.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
# Vendored third-party code (verbatim upstream rule tables / linguistic data) is
# kept byte-identical and is exempt from style/length/type linting.
extend-exclude = ["brainpalace_server/indexing/text_analysis/vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["brainpalace_server/indexing/text_analysis/vendor/"]

# Vendored third-party stemmer: kept byte-identical to upstream, not type-checked.
[[tool.mypy.overrides]]
module = "brainpalace_server.indexing.text_analysis.vendor.*"
ignore_errors = true
follow_imports = "skip"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pydantic._internal._generate_schema.UnsupportedFieldAttributeWarning",
]
markers = [
    "openai: marks tests that require OPENAI_API_KEY",
    "anthropic: marks tests that require ANTHROPIC_API_KEY",
    "cohere: marks tests that require COHERE_API_KEY",
    "ollama: marks tests that require Ollama to be running",
    "postgres: marks tests that require PostgreSQL database",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
